Test bank level Controller with traces, add the return traces clk,req_addr,core_id

--- a/ramulator2/.vscode/launch.json
+++ b/ramulator2/.vscode/launch.json
@@ -6,9 +6,9 @@
             "request": "launch",
             "program": "${workspaceFolder}/build/ramulator2",
             // "args": ["-f","${workspaceFolder}/config_files/test/testing_pattern_config.yaml"],
-            "args": ["-f","/home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/testing_in_order_ld_st_stall_ideal_debug.yaml"],
+            "args": ["-f","${workspaceFolder}/debug/testing_in_order_ld_st_stall_rd_wr_interleave_debug.yaml"],
             "stopAtEntry": true,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/build",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
