--- a/ramulator2/debug/testing_in_order_ld_st_stall_ideal_debug.yaml
+++ b/ramulator2/debug/testing_in_order_ld_st_stall_ideal_debug.yaml
@@ -1,46 +1,47 @@
 Frontend:
   impl: LoadStoreStallTrace
   clock_ratio: 3
-  num_expected_insts: 10000
-  debug: true
+  num_expected_insts: 10
+  returned_trace_path: ../returned_trace/
+  debug: false
   traces:
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_0.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_1.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_2.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_3.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_4.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_5.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_6.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_7.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_8.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_9.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_10.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_11.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_12.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_13.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_14.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_15.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_16.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_17.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_18.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_19.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_20.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_21.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_22.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_23.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_24.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_25.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_26.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_27.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_28.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_29.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_30.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_31.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_32.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_33.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_34.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_35.txt
-    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_36.txt
+    - ../traces/_ideal_sequential_trace_0.txt
+    - ../traces/_ideal_sequential_trace_1.txt
+    - ../traces/_ideal_sequential_trace_2.txt
+    - ../traces/_ideal_sequential_trace_3.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_4.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_5.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_6.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_7.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_8.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_9.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_10.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_11.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_12.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_13.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_14.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_15.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_16.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_17.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_18.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_19.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_20.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_21.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_22.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_23.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_24.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_25.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_26.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_27.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_28.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_29.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_30.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_31.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_32.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_33.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_34.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_35.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_36.txt
     # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_37.txt
     # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_38.txt
     # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_39.txt
@@ -167,7 +168,7 @@ MemorySystem:
       preset: DDR4_1Gb_1bank_x1024
       channel_width: 1024
       # preset: DDR4_2Gb_x4
-      channel: 64
+      channel: 4
       rank: 1
     timing:
       preset: DDR4_3DDRAM_1024
