--- a/Memory_Controller/Thesis_Memory_Controller/Command_Scheduler/Modifying_3D_DRAM.rc
+++ b/Memory_Controller/Thesis_Memory_Controller/Command_Scheduler/Modifying_3D_DRAM.rc
@@ -2,7 +2,7 @@ Magic 271485
 Revision Verdi_T-2022.06
 
 ; Window Layout <x> <y> <width> <height> <signalwidth> <valuewidth>
-viewPort 1920 23 1920 1009 338 186
+viewPort 0 28 1920 961 412 329
 
 ; File list:
 ; openDirFile [-d delimiter] [-s time_offset] [-rf auto_bus_rule_file] path_name file_name
@@ -16,16 +16,16 @@ signalSpacing 5
 
 ; windowTimeUnit is used for zoom, cursor & marker
 ; waveform viewport range
-zoom 1882137.122254 1967403.329971
-cursor 52734000.000000
+zoom 5674340.644247 5811788.032265
+cursor 5757001.000000
 marker 0.000000
 
 ; user define markers
 ; userMarker time_pos marker_name color linestyle
 ; visible top row signal index
-top 21
+top 2
 ; marker line index
-markerPos 87
+markerPos 89
 
 ; event list
 ; addEvent event_name event_expression
@@ -48,7 +48,16 @@ curSTATUS ByChange
 addGroup "Main FSM CMD"
 activeDirFile "" "/home/2023_summer/2023train11/Seniors_DDR3/Chang_DDR/Package.fsdb"
 addSignal -h 21 /TESTBED/I_Package/Rank0/clk
-addSignal -h 21 -holdScope command
+addSignal -expanded -h 21 -holdScope command
+addSignal -h 21 -UNSIGNED -holdScope command.r_w
+addSignal -h 21 -holdScope command.none_0
+addSignal -h 21 -UNSIGNED -HEX -holdScope command.row_addr[15:0]
+addSignal -h 21 -holdScope command.none_1
+addSignal -h 21 -UNSIGNED -holdScope command.burst_length
+addSignal -h 21 -holdScope command.none_2
+addSignal -h 21 -holdScope command.auto_precharge
+addSignal -h 21 -UNSIGNED -UDEC -holdScope command.col_addr[3:0]
+addSignal -h 21 -UNSIGNED -HEX -holdScope command.bank_addr[2:0]
 addSignal -h 21 -UNSIGNED -holdScope state[4:0]
 addSignal -h 21 -UNSIGNED -holdScope state_nxt[4:0]
 addSignal -h 21 -holdScope act_busy
@@ -58,10 +67,12 @@ addGroup "Bank FSM"
 addSignal -h 21 /TESTBED/I_Package/Rank0/clk
 addSignal -h 21 -UNSIGNED /TESTBED/I_Package/Rank0/ba0/ba_state[4:0]
 addSignal -h 21 -UNSIGNED -holdScope ba_state_nxt[4:0]
-addSignal -h 21 -UNSIGNED -HEX /TESTBED/I_Package/Rank0/ba0/command_buf[31:0]
-addSignal -h 21 -UNSIGNED /TESTBED/I_Package/Rank0/ba0/process_cmd[2:0]
+addSignal -h 21 -UNSIGNED -holdScope process_cmd[2:0]
 addSignal -h 21 -holdScope stall
 addSignal -h 21 -holdScope ba_issue
+addSignal -h 21 -UNSIGNED -HEX /TESTBED/I_Package/Rank0/dq_all[1023:0]
+addSignal -h 21 -UNSIGNED -HEX /TESTBED/I_Package/read_data[1023:0]
+addSignal -h 21 -holdScope read_data_valid
 addGroup "CMD Scheduler"
 addSignal -h 21 /TESTBED/I_Package/Rank0/scheduler/clk
 addSignal -h 21 -UNSIGNED -holdScope bax_state[4:0]
@@ -111,29 +122,30 @@ addSignal -h 21 -UNSIGNED -HEX -holdScope tP_baxx[4:0]
 addSignal -h 21 -UNSIGNED -HEX -holdScope tP_bax[4:0]
 addSignal -h 21 -UNSIGNED -HEX -holdScope tP_recodex[2:0]
 addSignal -h 21 -UNSIGNED -HEX -holdScope tP_recodexx[2:0]
+addGroup "W_DATA_FIFO"
 addGroup "DDR PHY"
 addSignal -h 21 /TESTBED/I_Package/Rank0/clk
 addSignal -expanded -h 21 -UNSIGNED -holdScope d_state[3:0]
 addSignal -h 21 -UNSIGNED -holdScope d_state_nxt[3:0]
-addSignal -h 21 -UNSIGNED -holdScope dq_state[15:0]
-addSignal -h 21 -UNSIGNED -holdScope dq_state_nxt[15:0]
+addSignal -h 21 -UNSIGNED -HEX -holdScope dq_state[15:0]
+addSignal -h 21 -UNSIGNED -HEX -holdScope dq_state_nxt[15:0]
 addSignal -h 21 -holdScope clk2
 addSignal -h 21 -holdScope cas_n
 addSignal -h 21 /TESTBED/I_Package/Rank0/Bank0/ck
 addSignal -h 21 /TESTBED/I_Package/Rank0/cke
 addSignal -h 21 -UNSIGNED -HEX /TESTBED/I_Package/Rank0/Bank0/ba[2:0]
-addSignal -h 21 -UNSIGNED -BIN /TESTBED/I_Package/Rank0/cs_mux[3:0]
+addSignal -h 21 -UNSIGNED -UDEC -holdScope addr[13:0]
+addSignal -h 21 -UNSIGNED -HEX /TESTBED/I_Package/Rank0/dq_all[1023:0]
+addSignal -h 21 -UNSIGNED -BIN -holdScope cs_mux[3:0]
 addSignal -h 21 -holdScope ck_n
 addSignal -h 21 -holdScope cs_n
 addSignal -h 21 -holdScope ras_n
 addSignal -h 21 -holdScope cas_n
 addSignal -h 21 -holdScope we_n
 addSignal -h 21 -UNSIGNED -HEX -holdScope dm_tdqs_in[1:0]
-addSignal -h 21 -UNSIGNED -BIN /TESTBED/I_Package/Rank0/Bank0/addr[13:0]
-addSignal -h 21 -UNSIGNED -HEX -holdScope dq[15:0]
-addSignal -h 21 -UNSIGNED -HEX -holdScope dq_all[127:0]
-addSignal -h 21 /TESTBED/I_Package/Rank0/odt
+addSignal -h 21 -holdScope odt
 addGroup "G5"
+addGroup "G8"
 
 ; getSignalForm Scope Hierarchy Status
 ; active file of getSignalForm
@@ -159,6 +171,7 @@ SCOPE_LIST_BEGIN
 "/TESTBED/I_Package/Rank0/scheduler/CMD_AUTHORIZE_BLOCK"
 "/TESTBED/I_Package/Rank0/isu_fifo"
 "/TESTBED/I_Package/Rank0/isu_fifo/TEST_SIGNALS"
+"/TESTBED/I_PATTERN"
 SCOPE_LIST_END
 
 GETSIGNALFORM_SCOPE_HIERARCHY_END
