--- a/cacti/3DDRAM_Design_Exploration/Configs/3DDRAM_DDR4_1Gb_512.cfg
+++ b/cacti/3DDRAM_Design_Exploration/Configs/3DDRAM_DDR4_1Gb_512.cfg
@@ -15,7 +15,7 @@
 //-size (bytes) 536870912
 //-size (bytes) 1073741824
 # For 3D DRAM memory please use Gb as units
--size (Gb) 1 # Thus model each bank as 512MB
+-size (Gb) 4 # Thus model each bank as 512MB
 
 # Line size
 //-block size (bytes) 8
@@ -34,9 +34,10 @@
 -single ended read ports 0
 
 # Multiple banks connected using a bus
--UCA bank count 1
-//-technology (u) 0.032
--technology (u) 0.040
+-UCA bank count 8
+# -technology (u) 0.022
+-technology (u) 0.032
+# -technology (u) 0.040
 //-technology (u) 0.065
 //-technology (u) 0.078
 //-technology (u) 0.080
@@ -47,8 +48,8 @@
 # following three parameters are meaningful only for main memories
 
 //-page size (bits) 8192
--burst length 8
--internal prefetch width 8
+-burst length 1
+-internal prefetch width 128
 
 # following parameter can have one of five values -- (itrs-hp, itrs-lstp, itrs-lop, lp-dram, comm-dram)
 //-Data array cell type - "itrs-hp"
@@ -97,7 +98,7 @@
 -page size (bits) 8192
 
 -burst depth 1 // for 3D DRAM, IO per bank equals the product of burst depth and IO width
--IO width 128
+-IO width 256
 -system frequency (MHz) 800
 
 -stacked die count 4
@@ -163,8 +164,8 @@
 # wires to find an optimal configuration. However, it is possible to
 # restrict the search space by changing the signaling from "default" to
 # "fullswing" or "lowswing" type.
--Wire signaling (fullswing, lowswing, default) - "default"
-//-Wire signaling (fullswing, lowswing, default) - "Global_5"
+# -Wire signaling (fullswing, lowswing, default) - "default"
+-Wire signaling (fullswing, lowswing, default) - "Global_5"
 //-Wire signaling (fullswing, lowswing, default) - "lowswing"
 
 //-Wire inside mat - "global"
@@ -197,8 +198,8 @@
 //-Force cache config - "true"
 -Force cache config - "false"
 #This also sets the subarray numbers
--Ndwl 16
--Ndbl 32
+-Ndwl 32
+-Ndbl 16
 -Nspd 1
 -Ndcm 1
 -Ndsam1 1
@@ -210,8 +211,8 @@
 # Memory Type (D3=DDR3, D4=DDR4, L=LPDDR2, W=WideIO, S=Serial). Additional memory types can be defined by the user in extio_technolog
 
 //-dram_type "DDR3"
--dram_type "DDR4"
-//-dram_type "LPDDR2"
+//-dram_type "DDR4"
+-dram_type "LPDDR2"
 //-dram_type "WideIO"
 //-dram_type "Serial"
 
