Modify Command Scheduler with frontend command translation

--- a/ramulator2/config_files/3D_DRAM_analysis_config/3D_1Gb_1_channel_4_core_config.yaml
+++ b/ramulator2/config_files/3D_DRAM_analysis_config/3D_1Gb_1_channel_4_core_config.yaml
@@ -43,6 +43,7 @@ MemorySystem:
       rank: 1
     timing:
       preset: DDR4_3DDRAM_128
+      nRCD: 10  # 這裡的值會被腳本修改
 
   Controller:
     impl: Generic
