--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
@@ -52,7 +52,8 @@ MemorySystem:
     Scheduler:
       impl: FCFS
     RefreshManager:
-      impl: AllBank
+      impl: PartialRefresh                        # PartialRefresh AllBank
+      num_refresh_blocks: 4
     RowPolicy:
       impl: AdaptiveRowPolicy                # AdaptiveRowPolicy ClosedRowPolicy
       cap: 4
