DRAM Controller updated, gate level pass 03, Area = 58646

--- a/Memory_Controller/Thesis_Memory_Controller/DRAM_Controller/00_TESTBED/makefile
+++ b/Memory_Controller/Thesis_Memory_Controller/DRAM_Controller/00_TESTBED/makefile
@@ -60,6 +60,7 @@ VCS_GATE_SIM = vcs ${TIMESCALE} \
     -full64 \
     -Mupdate \
     -R \
+	${MEM_DEFINE} \
     -debug_access+all \
     -f ${source_file} \
     -o ${output_file} \
