fix partial refresh bug

--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
@@ -55,7 +55,7 @@ MemorySystem:
       impl: PartialRefresh                        # PartialRefresh AllBank
       num_refresh_blocks: 4
     RowPolicy:
-      impl: AdaptiveRowPolicy                # AdaptiveRowPolicy ClosedRowPolicy
+      impl: OpenRowPolicy                # AdaptiveRowPolicy ClosedRowPolicy
       cap: 4
     plugins:
       - ControllerPlugin:
