--- a/ramulator2/src/CMakeLists.txt
+++ b/ramulator2/src/CMakeLists.txt
@@ -1,14 +1,3 @@
-add_subdirectory(base)
-add_subdirectory(test)
-add_subdirectory(frontend)
-add_subdirectory(translation)
-add_subdirectory(memory_system)
-add_subdirectory(addr_mapper)
-add_subdirectory(dram)
-add_subdirectory(dram_controller)
-
-target_sources(
-  ramulator-exe
-  PRIVATE 
-  main.cpp
-)
+version https://git-lfs.github.com/spec/v1
+oid sha256:260e7a8da360e591237921422679205267498c692e40e8ad014c315b460a0291
+size 293
