--- a/ramulator2/src/addr_mapper/CMakeLists.txt
+++ b/ramulator2/src/addr_mapper/CMakeLists.txt
@@ -1,16 +1,3 @@
-add_library(ramulator-addrmapper OBJECT)
-
-target_sources(
-  ramulator-addrmapper PRIVATE
-  addr_mapper.h 
-
-  impl/linear_mappers.cpp
-  impl/rit.cpp
-  impl/rit.h
-)
-
-target_link_libraries(
-  ramulator
-  PRIVATE
-  ramulator-addrmapper
-)
+version https://git-lfs.github.com/spec/v1
+oid sha256:d2014d974ffa3774a979e9fe5c8ab5258e6aed1db01e7d4a2f148604123a180f
+size 248
