--- a/ramulator2/src/base/CMakeLists.txt
+++ b/ramulator2/src/base/CMakeLists.txt
@@ -1,24 +1,3 @@
-add_library(ramulator-base OBJECT)
-
-target_sources(
-  ramulator-base PRIVATE
-  base.h      
-  factory.h   factory.cpp
-  type.h
-  exception.h
-  logging.h   logging.cpp
-  debug.h
-  param.h 
-  utils.h     utils.cpp
-  config.h    config.cpp
-  clocked.h
-  stats.h     stats.cpp
-  request.h   request.cpp
-  serialization.h
-)
-
-target_link_libraries(
-  ramulator
-  PRIVATE
-  ramulator-base
-)
+version https://git-lfs.github.com/spec/v1
+oid sha256:74c9da56a6ef4df794e339a6a30d3d27c1380bce8da1e943817d986f6fb12ce7
+size 406
