--- a/ramulator2/src/memory_system/CMakeLists.txt
+++ b/ramulator2/src/memory_system/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(
   impl/bh_DRAM_system.cpp
   impl/dummy_memory_system.cpp
   impl/generic_DRAM_system.cpp
+  impl/Global_Controller.cpp
 )
 
 target_link_libraries(
