--- a/ramulator2/Trace_Verification_RTL_C++/testing_latency_verification_Consecutive_RW.yaml
+++ b/ramulator2/Trace_Verification_RTL_C++/testing_latency_verification_Consecutive_RW.yaml
@@ -7,7 +7,7 @@ Frontend:
   returned_trace_path: ../returned_trace/
   debug: false
   raw_on: true
-  
+
   traces:
     - ../traces/_latency_verification_trace_0.txt
     # - ../../llm_core_trace.txt
@@ -29,10 +29,10 @@ MemorySystem:
     drampower_enable: true # This can enable dram power model
     structure_type: 1
 
-    m_activation_power :  2.78618
-    m_precharge_power : 2.61996
-    m_read_power : 12.0993
-    m_write_power : 12.0994
+    activation_power :  1.49164
+    precharge_power : 1.38858
+    read_power : 5.8933
+    write_power : 5.8933
 
     # The preset of DRAM voltage and current must be specified, also the preset for power modeling has to exists within.
     voltage:
