--- a/ramulator2/performance_test/testing_latency_verification_all_row_buffer_conflicts.yaml
+++ b/ramulator2/performance_test/testing_latency_verification_all_row_buffer_conflicts.yaml
@@ -24,10 +24,10 @@ MemorySystem:
     drampower_enable: true # This can enable dram power model
     structure_type: 1
 
-    m_activation_power :  2.78618
-    m_precharge_power : 2.61996
-    m_read_power : 12.0993
-    m_write_power : 12.0994
+    activation_power :  2.78618
+    precharge_power : 2.61996
+    read_power : 12.0993
+    write_power : 12.0994
 
     # The preset of DRAM voltage and current must be specified, also the preset for power modeling has to exists within.
     voltage:
