--- a/ramulator2/config_files/trace_analysis/0ms_ideal_refresh_Without_WUPR_Analysis.yaml
+++ b/ramulator2/config_files/trace_analysis/0ms_ideal_refresh_Without_WUPR_Analysis.yaml
@@ -15,8 +15,7 @@ MemorySystem:
     impl: RoBaRaCoCh
   Controller:
     RefreshManager:
-      impl: PartialRefresh
-      num_refresh_blocks: 16
+      impl: AllBank
     RowPolicy:
       cap: 4
       impl: OpenRowPolicy
@@ -30,7 +29,7 @@ MemorySystem:
         commands_to_count:
         - REFab
         impl: CommandCounter
-        path: ../cmd_records/16ms_With_WUPR_Analysis.cmd
+        path: ../cmd_records/0ms_Without_WUPR_Analysis.cmd
     sample_time: 500
     write_data_buffer_depth: 3
   DRAM:
@@ -51,7 +50,8 @@ MemorySystem:
     timing:
       nCCDL: 4
       nCCDS: 4
-      nREFI: 1950
+      nRFC : 1
+      nREFI: 100000000
       preset: DDR4_3DDRAM_1024
     voltage:
       preset: 3D-DRAM-32nm
