--- a/ramulator2/config_files/trace_analysis/8ms_With_WUPR_Analysis.yaml
+++ b/ramulator2/config_files/trace_analysis/8ms_With_WUPR_Analysis.yaml
@@ -16,6 +16,7 @@ MemorySystem:
   Controller:
     RefreshManager:
       impl: PartialRefresh
+      num_refresh_blocks: 16
     RowPolicy:
       cap: 4
       impl: OpenRowPolicy
