--- a/ramulator2/bank_analysis/tsv_1024_Page16384_Stack4_Size2_Bank512_UCA1_ar.yaml
+++ b/ramulator2/bank_analysis/tsv_1024_Page16384_Stack4_Size2_Bank512_UCA1_ar.yaml
@@ -15,8 +15,8 @@ MemorySystem:
     impl: RoBaRaCoCh
   Controller:
     RefreshManager:
-      impl: PartialRefresh
-      num_refresh_blocks: 16
+      impl: AllBank
+      # num_refresh_blocks: 16
     RowPolicy:
       cap: 4
       impl: OpenRowPolicy
@@ -30,7 +30,7 @@ MemorySystem:
         commands_to_count:
         - REFab
         impl: CommandCounter
-        path: ../cmd_records/tsv_1024_Page8192_Stack4_Size4_Bank1024_UCA1.cmd
+        path: ../cmd_records/tsv_1024_Page16384_Stack4_Size2_Bank512_UCA1_ar.cmd
     sample_time: 500
     write_data_buffer_depth: 3
   DRAM:
@@ -51,8 +51,8 @@ MemorySystem:
     timing:
       nCCDL: 4
       nCCDS: 4
-      nRFC: 110
-      nRCD: 8
+      nRFC: 80
+      nRCD: 10
       nRAS: 16
       nRP: 7
       nRC: 22
