--- a/ramulator2/config_files/trace_analysis/16ms_Without_WUPR_Analysis.yaml
+++ b/ramulator2/config_files/trace_analysis/16ms_Without_WUPR_Analysis.yaml
@@ -51,6 +51,12 @@ MemorySystem:
       nCCDL: 4
       nCCDS: 4
       nREFI: 1950
+      nRFC: 110
+      nRCD: 7
+      nRAS: 10
+      nRP: 3
+      nRC: 12
+      preset: DDR4_3DDRAM_1024
       preset: DDR4_3DDRAM_1024
     voltage:
       preset: 3D-DRAM-32nm
