New trace analysis results

--- a/cacti/Used_config_log_file/area_estimation_16_16_DRAM.cfg
+++ b/cacti/Used_config_log_file/area_estimation_16_16_DRAM.cfg
@@ -16,8 +16,7 @@
 //-size (bytes) 1073741824
 # For 3D DRAM memory please use Gb as units
 # This is the total size of the 3D DRAM memory
-# For stack of 4 dies, the total size is 4(Gb), each die is 1(Gb)
--size (Gb) 4
+-size (Gb) 16
 
 # Line size
 //-block size (bytes) 8
@@ -36,9 +35,9 @@
 -single ended read ports 0
 
 # Multiple banks connected using a bus
--UCA bank count 1
-# -technology (u) 0.032
+-UCA bank count 16
 -technology (u) 0.022
+//-technology (u) 0.032
 //-technology (u) 0.040
 //-technology (u) 0.065
 //-technology (u) 0.078
@@ -51,7 +50,7 @@
 
 //-page size (bits) 8192
 -burst length 1
--internal prefetch width 1024
+-internal prefetch width 128
 
 # following parameter can have one of five values -- (itrs-hp, itrs-lstp, itrs-lop, lp-dram, comm-dram)
 //-Data array cell type - "itrs-hp"
@@ -61,8 +60,8 @@
 
 # following parameter can have one of three values -- (itrs-hp, itrs-lstp, itrs-lop)
 //-Data array peripheral type - "itrs-hp"
--Data array peripheral type - "itrs-lstp"
-//-Data array peripheral type - "itrs-lop"
+//-Data array peripheral type - "itrs-lstp"
+-Data array peripheral type - "itrs-lop"
 
 # following parameter can have one of five values -- (itrs-hp, itrs-lstp, itrs-lop, lp-dram, comm-dram)
 -Tag array cell type - "itrs-hp"
@@ -94,8 +93,8 @@
 
 # Note for typical 3D-DRAM row buffer size is 1KB or 2KB for energy trade offs
 # -page size (bits) 1024
-# -page size (bits) 16384
 -page size (bits) 16384
+# -page size (bits) 8192
 
 # These are important TSV parameters
 -burst depth 1 // for 3D DRAM, IO per bank equals the product of burst depth and IO width
@@ -121,9 +120,9 @@
 # normal - data array lookup and tag access happen in parallel
 #          final data block is broadcasted in data array h-tree
 #          after getting the signal from the tag array
-//-access mode (normal, sequential, fast) - "fast"
+-access mode (normal, sequential, fast) - "fast"
 //-access mode (normal, sequential, fast) - "normal"
--access mode (normal, sequential, fast) - "sequential"
+//-access mode (normal, sequential, fast) - "sequential"
 
 
 # DESIGN OBJECTIVE for UCA (or banks in NUCA)
@@ -148,8 +147,8 @@
 # Note: Optimize tag will disable weight or deviate values mentioned above
 # Set it to NONE to let weight and deviate values determine the
 # appropriate cache configuration
--Optimize ED or ED^2 (ED, ED^2, NONE): "ED"
-//-Optimize ED or ED^2 (ED, ED^2, NONE): "ED^2"
+//-Optimize ED or ED^2 (ED, ED^2, NONE): "ED"
+-Optimize ED or ED^2 (ED, ED^2, NONE): "ED^2"
 //-Optimize ED or ED^2 (ED, ED^2, NONE): "NONE"
 
 -Cache model (NUCA, UCA)  - "UCA"
@@ -171,8 +170,8 @@
 //-Wire signaling (fullswing, lowswing, default) - "Global_5"
 -Wire signaling (fullswing, lowswing, default) - "lowswing"
 
-//-Wire inside mat - "global"
--Wire inside mat - "semi-global"
+-Wire inside mat - "global"
+//-Wire inside mat - "semi-global"
 -Wire outside mat - "global"
 //-Wire outside mat - "semi-global"
 
@@ -189,8 +188,8 @@
 
 -Add ECC - "false"
 
-//-Print level (DETAILED, CONCISE) - "CONCISE"
--Print level (DETAILED, CONCISE) - "DETAILED"
+-Print level (DETAILED, CONCISE) - "CONCISE"
+//-Print level (DETAILED, CONCISE) - "DETAILED"
 
 # for debugging
 -Print input parameters - "true"
@@ -201,8 +200,8 @@
 //-Force cache config - "true"
 -Force cache config - "false"
 #This also sets the subarray numbers, can turn it off, let cacti find it
--Ndwl 512
--Ndbl 512
+-Ndwl 256
+-Ndbl 1024
 -Nspd 1
 -Ndcm 1
 -Ndsam1 1
@@ -215,8 +214,8 @@
 
 //-dram_type "DDR3"
 //-dram_type "DDR4"
-//-dram_type "LPDDR2"
--dram_type "WideIO"
+-dram_type "LPDDR2"
+//-dram_type "WideIO"
 //-dram_type "Serial"
 
 # Memory State (R=Read, W=Write, I=Idle  or S=Sleep)
@@ -273,7 +272,7 @@
 
 # Width of the Memory Data Bus
 
--mem_data_width 1024 //x4 or x8 or x16 or x32 memories. For WideIO upto x128.
+-mem_data_width 128 //x4 or x8 or x16 or x32 memories. For WideIO upto x128.
 
 # RTT Termination Resistance
 
