--- a/ramulator2/Trace_Verification_RTL_C++/testing_latency_verification_Read_Write_Interleaving_Same_address.yaml
+++ b/ramulator2/Trace_Verification_RTL_C++/testing_latency_verification_Read_Write_Interleaving_Same_address.yaml
@@ -1,10 +1,10 @@
 Frontend:
   impl: LoadStoreStallTrace
   clock_ratio: 3
-  num_expected_insts: 2000000
+  num_expected_insts: 20000
   returned_trace_path: ../returned_trace/
   bandwidth_sample_time_interval: 100
-  debug: true
+  debug: false
   traces:
     - ../traces/_read_write_interleave_same_row_trace_0.txt
 
@@ -13,7 +13,7 @@ Frontend:
     max_addr: 33554432
 
 MemorySystem:
-  impl: GenericDRAM
+  impl: Global_Controller
   clock_ratio: 3
 
   DRAM:
@@ -39,7 +39,7 @@ MemorySystem:
       # Thus when creating the yaml file, these are the parameters
       channel_width: 1024
       row: 65536
-      column: 16    
+      column: 16
       density: 1024 #Mb
       channel: 1
       rank: 1
